[package]
name = "addrindexrs"
version = "0.4.0"
authors = ["Roman Zeyde <me@romanzey.de>", "kenshin-samourai <kenshin_samourai@tutanota.com>"]
description = "An efficient address indexer in Rust"
license = "MIT"
homepage = "https://github.com/Samourai-Wallet/addrindexrs"
repository = "https://github.com/Samourai-Wallet/addrindexrs"
keywords = ["bitcoin", "server", "index", "database"]
documentation = "https://github.com/Samourai-Wallet/addrindexrs/blob/master/doc/usage.md"
readme = "README.md"
edition = "2018"
build = "build.rs"

[package.metadata.configure_me]
spec = "config_spec.toml"

[profile.release]
lto = true

[features]
latest_rust = []  # use latest Rust features (otherwise, support Rust 1.34)

[dependencies]
base64 = "=0.10"
bincode = "=1.0"
bitcoin = { version = "=0.21", features = ["use-serde"] }
bitcoin_hashes = "=0.7.1"
configure_me = "=0.3.3"
crossbeam-channel = "=0.3"
dirs = "=1.0"
error-chain = "=0.12"
glob = "=0.3"
hex = "=0.3"
hyper = "=0.13.6"
hyperlocal = "=0.7"
libc = "=0.2"
log = "=0.4"
lru = "=0.1"
num_cpus = "=1.0"
page_size = "=0.4"
rocksdb = "=0.12"
rust-crypto = "=0.2"
serde = "=1.0"
serde_derive = "=1.0"
serde_json = "=1.0"
signal-hook = "=0.1"
socket2 = { version = "=0.3.18", features = ["reuseport"] }
stderrlog = "=0.4.1"
sysconf = "=0.3.4"
time = "=0.1"
tiny_http = "=0.6"
# close to same tokio version as dependent by hyper v0.13.6 and hyperlocal 0.7 -- things can go awry if they mismatch
tokio = { version = "=0.2.6", features = ["sync", "macros"] }
url = "=2.2.0"

[build-dependencies]
configure_me_codegen = "=0.3.12"
